<resources>
    <string name="app_name">AutoScrollViewPager</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_load_frm_srv">加载网络图片</string>
    <string name="load_frm_net">加载网络图片</string>
    <string name="add_new_image">添加新图片</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="image_slide">图片轮播</string>
</resources>
